--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 html {
   background-color: rgb(211, 210, 210);
+  font-size: 100%;
+  font-family: 'Barlow', sans-serif;
 }
 
 body {
@@ -11,8 +13,16 @@ a {
   color: black;
 }
 
+a:active {
+  color: #fa923f;
+}
+
+img:hover {
+  cursor: pointer;
+}
 
 /* header */
+
 .fixed-bar {
   height: 70px;
 }
@@ -27,33 +37,31 @@ a {
   padding: 10px 0;
   margin: 0;
   text-align: center;
+  font-size: 32px;
+  font-size: 2rem;
 }
 
+
 /* nav */
+
 .navigation {
   text-align: center;
   padding: 0;
 }
 
-.navigation li, .navigation a {
+.navigation li {
   display: inline-block;
-  width: 70px;
+  width: 20%;
   background-color: rgb(161, 160, 160);
+  font-size: 16px;
+  font-size: 0.9rem;
 }
+
 
 /* main */
-.trip-text {
-  background-color: orange;
-  padding: 0;
-  display: flex;
-}
 
-.trip-text p {
-  background-color: #521751;
-  color: white;
-  text-align: center;
-  margin: 0;
-  width: 50%;
+.trip-text {
+  display: none;
 }
 
 .trip-images {
@@ -62,9 +70,7 @@ a {
 }
 
 .trip-images img {
-  width: 50%;
-  min-width: 200px;
-  max-width: 500px;
+  width: 100%;
   height: 100%;
 }
 
@@ -75,9 +81,13 @@ a {
   text-align: center;
   margin: 0;
   bottom: 18.4px;
+  font-size: 16px;
+  font-size: 1rem;
 }
 
+
 /* footer */
+
 .review-clients {
   display: flex;
   align-items: center;
@@ -92,7 +102,40 @@ a {
   width: 120px;
 }
 
-.review-clients p{
+.review-clients p {
   width: 350px;
   text-align: center;
+  font-size: 16px;
+  font-size: 1rem;
+}
+
+
+/* media queries */
+
+@media (min-width: 400px){
+  .navigation li {
+    font-size: 1.2rem;
+  }
+}
+
+@media (min-width: 700px){
+  .trip-images img {
+    width: 50%;
+  }
+
+  .trip-text {
+    background-color: #fa923f;
+    padding: 0;
+    display: flex;
+  }
+
+  .trip-text p {
+    background-color: #521751;
+    color: white;
+    text-align: center;
+    margin: 0;
+    width: 50%;
+    font-size: 16px;
+    font-size: 1rem;
+  }
 }
