--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ img:hover {
 .navigation {
   text-align: center;
   padding: 0;
+  font-weight: bold;
 }
 
 .navigation li {
@@ -107,6 +108,7 @@ img:hover {
   text-align: center;
   font-size: 16px;
   font-size: 1rem;
+  font-weight: bold;
 }
 
 
